Adding initial role tasks
This is a simple role so not much to do other than install node and test it works.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,10 @@
 ---
-# ...
+# Installs NodeJS and NPM
+
+- include: install.yml
+  tags:
+    - BARC_INSTALL
+    - BARC_INSTALL_PACKAGES
 
 - include: register-role.yml
   tags:
